--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 # Core dependencies
 python-dateutil>=2.8.2  # Date parsing
-pandas>=1.3.0
-pyarrow>=6.0.0
+pandas>=2.0.0
+pyarrow>=14.0.0
+dask[dataframe]>=2024.1.0
 
 # Local LLM dependencies
 torch>=2.2.2  # PyTorch
